@@ -16,15 +16,14 @@
 
 package com.badlogic.gdx.backends.lwjgl;
 
-import java.awt.Canvas;
 import java.io.File;
 
-import com.badlogic.gdx.ApplicationLogger;
 import org.lwjgl.LWJGLException;
 import org.lwjgl.opengl.Display;
 
 import com.badlogic.gdx.Application;
 import com.badlogic.gdx.ApplicationListener;
+import com.badlogic.gdx.ApplicationLogger;
 import com.badlogic.gdx.Audio;
 import com.badlogic.gdx.Files;
 import com.badlogic.gdx.Gdx;
@@ -39,6 +38,8 @@ import com.badlogic.gdx.utils.GdxRuntimeException;
 import com.badlogic.gdx.utils.ObjectMap;
 import com.badlogic.gdx.utils.SnapshotArray;
 
+import java.awt.Canvas;
+
 /** An OpenGL surface fullscreen or in a lightweight window. */
 public class LwjglApplication implements Application {
 	protected final LwjglGraphics graphics;
@@ -51,7 +52,8 @@ public class LwjglApplication implements Application {
 	protected boolean running = true;
 	protected final Array<Runnable> runnables = new Array<Runnable>();
 	protected final Array<Runnable> executedRunnables = new Array<Runnable>();
-	protected final SnapshotArray<LifecycleListener> lifecycleListeners = new SnapshotArray<LifecycleListener>(LifecycleListener.class);
+	protected final SnapshotArray<LifecycleListener> lifecycleListeners = new SnapshotArray<LifecycleListener>(
+		LifecycleListener.class);
 	protected int logLevel = LOG_INFO;
 	protected ApplicationLogger applicationLogger;
 	protected String preferencesdir;
@@ -153,24 +155,26 @@ public class LwjglApplication implements Application {
 		int lastHeight = graphics.getHeight();
 
 		graphics.lastTime = System.nanoTime();
-		boolean wasActive = true;
+		boolean wasPaused = false;
 		while (running) {
 			Display.processMessages();
 			if (Display.isCloseRequested()) exit();
 
-			boolean isActive = Display.isActive();
-			if (wasActive && !isActive) { // if it's just recently minimized from active state
-				wasActive = false;
+			boolean isMinimized = graphics.config.pauseWhenMinimized && !Display.isVisible();
+			boolean isBackground = !Display.isActive();
+			boolean paused = isMinimized || (isBackground && graphics.config.pauseWhenBackground);
+			if (!wasPaused && paused) { // just been minimized
+				wasPaused = true;
 				synchronized (lifecycleListeners) {
 					LifecycleListener[] listeners = lifecycleListeners.begin();
 					for (int i = 0, n = lifecycleListeners.size; i < n; ++i)
-						 listeners[i].pause();
+						listeners[i].pause();
 					lifecycleListeners.end();
 				}
 				listener.pause();
 			}
-			if (!wasActive && isActive) { // if it's just recently focused from minimized state
-				wasActive = true;
+			if (wasPaused && !paused) { // just been restore from being minimized
+				wasPaused = false;
 				synchronized (lifecycleListeners) {
 					LifecycleListener[] listeners = lifecycleListeners.begin();
 					for (int i = 0, n = lifecycleListeners.size; i < n; ++i)
@@ -203,7 +207,7 @@ public class LwjglApplication implements Application {
 					graphics.config.height = (int)(Display.getHeight() * Display.getPixelScaleFactor());
 					Gdx.gl.glViewport(0, 0, graphics.config.width, graphics.config.height);
 					if (listener != null) listener.resize(graphics.config.width, graphics.config.height);
-					graphics.requestRendering();
+					shouldRender = true;
 				}
 			}
 
@@ -213,12 +217,16 @@ public class LwjglApplication implements Application {
 			if (!running) break;
 
 			input.update();
-			shouldRender |= graphics.shouldRender();
+			if (graphics.shouldRender()) shouldRender = true;
 			input.processEvents();
 			if (audio != null) audio.update();
 
-			if (!isActive && graphics.config.backgroundFPS == -1) shouldRender = false;
-			int frameRate = isActive ? graphics.config.foregroundFPS : graphics.config.backgroundFPS;
+			if (isMinimized)
+				shouldRender = false;
+			else if (isBackground && graphics.config.backgroundFPS == -1) //
+				shouldRender = false;
+
+			int frameRate = isBackground ? graphics.config.backgroundFPS : graphics.config.foregroundFPS;
 			if (shouldRender) {
 				graphics.updateTime();
 				graphics.frameId++;
@@ -394,7 +402,6 @@ public class LwjglApplication implements Application {
 	public ApplicationLogger getApplicationLogger () {
 		return applicationLogger;
 	}
-
 
 	@Override
 	public void exit () {
