@@ -6,6 +6,8 @@
 - API Change: Pixmap blending was incorrect. Generated fonts may change for the better, but may require adjusting font settings.
 - API Change: Particle effects obtained from a ParticleEffectPool are now automatically started
 - Removed OSX 32-bit support
+- API Change: By default LWJGL2 backend no longer does pause/resume when becoming background/foreground window. New app config setting was added to enable the old behavior.
+- API Change: By default LWJGL2 backend now does pause/resume when window is minimized/restored. New app config setting was added to disable this behavior.
 
 [1.9.9]
 - API Addition: Add support for stripping whitespace in PixmapPacker
